# Saving_dr_Elara-image_process_project-

./: README.md
Saving_dr_Elara(image_process_project)/Project/Project/: CMakeLists.txt
Saving_dr_Elara(image_process_project)/Project/Project/src/: Convolution.cpp  Convolution.h  DecodeMessage.cpp  EdgeDetector.cpp  EdgeDetector.h  EncodeMessage.cpp  EncodeMessage.h  ImageMatrix.cpp  ImageMatrix.h  ImageProcessor.cpp  ImageProcessor.h  ImageSharpening.cpp  ImageSharpening.h
